--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* reset */
 * {
     margin: 0;
     padding: 0;
@@ -6,14 +7,21 @@
     font-family: 'Abel', sans-serif;
 }
 
+/* header */
 header {
     width: 100%;
     height: 677px;
 }
 
+.caroussel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .caroussel img {
     width: 100%;
-    height: 589px;
+    height: 578px;
 
     position: relative;
     top: 0;
@@ -24,4 +32,193 @@ header {
 
 .caroussel h1 {
     font-family: 'Pathway Gothic One', sans-serif;
+    font-size: clamp(3rem, 10vw, 8rem);
+    font-weight: 400;
+
+    position: absolute;
+}
+
+.product-types {
+    padding: 28px 40px;
+
+    display: flex;
+}
+
+.product-types span {
+    font-family: 'Abel', sans-serif;
+    font-size: clamp(1.3rem, 2vw, 2rem);
+    font-weight: 400;
+
+    margin-right: 20px;
+}
+
+.product-types span:nth-last-child(2) {
+    flex-grow: 1;
+}
+
+a {
+    display: inline-block;
+    position: relative;
+    color: black;
+    text-decoration: none;
+}
+
+a::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom center;
+    transition: transform 0.25s ease-out;
+    }
+
+a:hover::after{
+    transform: scaleX(1);
+    transform-origin: bottom center;
+}
+
+.search-area {
+    max-width: 400px;
+    min-width: 250px;
+    height: 60px;
+
+    display: flex;
+}
+
+.input-field {
+    width: 340px;
+    height: 60px;
+
+    border-radius: 0px 0px 0px 30px;
+    border-top: 1px solid;
+    border-left: 1px solid;
+    border-bottom: 1px solid;
+    border-right: transparent;
+
+    text-align: center;
+    font-size: 1.25rem;
+}
+
+.icon {
+    width: 70px;
+    height: 60px;
+}
+
+button {
+    width: 70px;
+    height: 60px;
+
+    border-top: 1px solid;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    border-left: transparent;
+
+    cursor: pointer;
+}
+
+.header-separator {
+    width: 100%;
+    margin-bottom: 110px;
+    border: 1px solid black;
+}
+
+/* produtos */
+#products {
+  width: 100%;
+  min-height: 500px;
+  height: auto;
+
+  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  margin-bottom: 200px;
+}
+
+#products-content {
+    width: 50%;
+    height: inherit;
+}
+
+.card {
+    width: 300px;
+    height: 430px;
+
+    float: left;
+    margin-bottom: 20px;
+    padding-top: 15px;
+
+    margin-right: 15px;
+}
+
+.img {
+    display: flex;
+    justify-content: center;
+}
+
+.card img {
+    width: 156px;
+    height: 156px;
+
+    margin-bottom: 30px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    padding-left: 25px;
+
+    font-size: 1.8rem;
+}
+
+.description span:first-child {
+    margin-bottom: 10px;
+}
+
+.description span:nth-child(2) {
+    margin-bottom: 20px;
+
+    cursor: pointer;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    max-height: 32px;      /* fallback */
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;
+}
+
+.card {
+    transition: 0.5s ease;
+}
+
+.card:hover {
+    box-shadow: 0px 10px 20px #b4b4b4;
+    transform: scale(1.02);
+}
+
+/* footer */
+.footer-separator {
+    width: 100%;
+    margin-bottom: 45px;
+    border: 1px solid black;
+}
+
+footer {
+    width: 100%;
+    height: 120.99px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+footer span {
+    font-size: clamp(1.3rem, 2vw, 2rem);
+    margin-bottom: 14px;
 }
