--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,16 @@ footer span {
     margin-bottom: 14px;
 }
 
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(https://smallenvelop.com/wp-content/uploads/2014/08/Preloader_10.gif) center no-repeat #fff;
+}
+
 @media screen and (max-width: 720px) {
     .product-types {
         display: flex;
